add POP-QUIZ blog

--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -15,3 +15,15 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+mariomichael:
+  name: Mario Michael Jeremy Sitanggang
+  title: Writer
+  url: https://github.com/mariomichael
+  image_url: https://github.com/mariomichael.png
+
+yodh4:
+  name: Cyrilus Yodha Maheswara
+  title: Co-Writer
+  url: https://github.com/yodh4
+  image_url: https://github.com/yodh4.png
